# tamanoir

./: Cargo.toml  Justfile  README.md  Release.md  bpftrace.script  rustc-ice-2025-01-08T19_06_53-12465.txt  rustc-ice-2025-02-28T14_03_47-123327.txt  rustc-ice-2025-02-28T14_04_04-123463.txt  test
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
assets/doc/: tamanoir-c2.md  tamanoir-tui.md  tamanoir.md
assets/payloads/hello/: linker.ld
assets/payloads/hello/src/: main.rs
assets/payloads/reverse-shell/: Cargo.toml
assets/payloads/reverse-shell/src/: main.rs
assets/payloads/reverse-tcp/src/: main.rs
assets/payloads/xeyes/: Cargo.toml
assets/payloads/xeyes/src/: main.rs
tamanoir/: Cargo.toml
tamanoir-c2/: Cargo.toml
tamanoir-c2/src/: cli.rs  dns_proxy.rs  grpc.rs  lib.rs  main.rs  tcp_shell.rs
tamanoir-c2/src/dns_proxy/: mod.rs
tamanoir-c2/src/rce/: mod.rs
tamanoir-common/: Cargo.toml
tamanoir-common/proto/tamanoir/: tamanoir.proto
tamanoir-common/src/: lib.rs  std_deps.rs
tamanoir-ebpf/: Cargo.toml  rust-toolchain.toml
tamanoir-ebpf/.cargo/: config.toml
tamanoir-ebpf/src/: common.rs  egress.rs
tamanoir-tui/: Cargo.toml
tamanoir-tui/src/: app.rs  event.rs  grpc.rs  handler.rs  lib.rs  main.rs  notification.rs  tui.rs  ui.rs
tamanoir-tui/src/section/: keylogger.rs  mod.rs  rce.rs  session.rs  shell.rs
tamanoir-tui/src/section/keylogger/: mod.rs  utils.rs
tamanoir-tui/src/section/session/: mod.rs  utils.rs
tamanoir-tui/src/session/: mod.rs  utils.rs
tamanoir/src/: main.rs  rce.rs
(+3 files in other folders)
