[package]
name = "tamanoir-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
prost = "0.13"
tonic = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
tonic-build = "0.12"
