[package]
name = "tamanoir-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tui-input = "0.11"
tokio = { workspace = true }
tokio-stream = "0.1"
anyhow = { workspace = true }
clap = { workspace = true }
prost = "0.13"
tonic = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tamanoir-common = { path = "../tamanoir-common",features= ["std"] }

[build-dependencies]
tonic-build = "0.12"


